--- a/views/admin/addCoupon.ejs
+++ b/views/admin/addCoupon.ejs
@@ -171,6 +171,12 @@
                                             <span id="couponCodeError" class="error"></span>
                                         </div>
                                         <div class="mb-4">
+                                            <label class="form-label">Starting Date</label>
+                                            <input type="date" placeholder="Enter starting data" class="form-control"
+                                                name="startingDate" id="startingDate" required>
+                                            <span id="nameError" class="error"></span>
+                                        </div>
+                                        <div class="mb-4">
                                             <label class="form-label">Description</label>
                                             <textarea placeholder="Enter description" class="form-control" rows="4"
                                                 name="description" id="description" required></textarea>
@@ -196,6 +202,7 @@
                                                 name="expire" id="expire" required>
                                             <span id="nameError" class="error"></span>
                                         </div>
+                                        
                                         <div>
 
                                             <button class="btn btn-md rounded font-sm hover-up">save</button>
