--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -178,7 +178,27 @@
                                 /* Adjust the text color for the "no categories" message */
                             }
                         </style>
-
+                        <aside class="left_widgets p_filter_widgets price_rangs_aside">
+                            <div class="l_w_title">
+                                <h3>Price Filter</h3>
+                            </div>
+                            <div class="widgets_inner">
+                                <div class="range_item">
+                                    <div id="slider-range"></div>
+                                    <input type="text" class="js-range-slider" value="" />
+                                    <div class="d-flex">
+                                        <div class="price_text">
+                                            <p>Price :</p>
+                                        </div>
+                                        <div class="price_value d-flex justify-content-center">
+                                            <input type="text" class="js-input-from" id="amount" readonly />
+                                            <span>to</span>
+                                            <input type="text" class="js-input-to" id="amount" readonly />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </aside>
                         <aside class="left_widgets p_filter_widgets">
                             <div class="l_w_title">
                                 <h3>ALL CATEGORIES</h3>
@@ -233,31 +253,11 @@
                             </div>
                         </aside> -->
 
-                        <!-- <aside class="left_widgets p_filter_widgets price_rangs_aside">
-                            <div class="l_w_title">
-                                <h3>Price Filter</h3>
-                            </div>
-                            <div class="widgets_inner">
-                                <div class="range_item">
-                                    <div id="slider-range"></div>
-                                    <input type="text" class="js-range-slider" value="" />
-                                    <div class="d-flex">
-                                        <div class="price_text">
-                                            <p>Price :</p>
-                                        </div>
-                                        <div class="price_value d-flex justify-content-center">
-                                            <input type="text" class="js-input-from" id="amount" readonly />
-                                            <span>to</span>
-                                            <input type="text" class="js-input-to" id="amount" readonly />
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </aside> -->
+
                     </div>
                 </div>
                 <div class="col-lg-9">
-                    <!-- <div class="row">
+                    <div class="row">
                         <div class="col-lg-12">
                             <div class="product_top_bar d-flex justify-content-between align-items-center">
                                 <div class="single_product_menu">
@@ -293,7 +293,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="breadcrumb_iner_item">
 
                         <!-- <p>Home <span>-</span> Shop Category</p> -->
@@ -497,38 +497,37 @@
 
     <script>
         function addToWishlist(productId) {
-            swal.fire({
-                title: 'Add to Wishlist',
-                text: 'Do you want to add this product to your wishlist?',
-                icon: 'question',
-                showCancelButton: true,
-                confirmButtonText: 'Yes',
-                cancelButtonText: 'No'
-            }).then((result) => {
-                if (result.isConfirmed) {
+            // swal.fire({
+            //     title: 'Add to Wishlist',
+            //     text: 'Do you want to add this product to your wishlist?',
+            //     icon: 'question',
+            //     showCancelButton: true,
+            //     confirmButtonText: 'Yes',
+            //     cancelButtonText: 'No'
+            // }).then((result) => {
+            //     if (result.isConfirmed) {
                     fetch('/wishlist', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
                         },
                         body: JSON.stringify({ productId: productId })
-                    })
+                    }).then(response => response.json())
                         .then(response => {
-                            if (response.ok) {
+                            if (response.success) {
                                 swal.fire("Success", "Product added to wishlist", "success");
                                 console.log('Product added to wishlist:', productId);
-
                             } else {
+                                swal.fire("Error", "Product already exists in the wishlist", "error");
                                 console.error('Failed to add product to wishlist:', productId);
-
                             }
                         })
                         .catch(error => {
                             console.error('Error adding product to wishlist:', error);
 
                         });
-                }
-            });
+                // }
+            // });
         }
 
     </script>
